# autograde-test

./: .gitignore  makefile  meson.build  multiplier  multiplier.c
.devcontainer/: devcontainer.json
.github/checker/: makefile  meson.build
.github/workflows/: classroom.yml
multiplier.dSYM/Contents/Resources/DWARF/: multiplier
src/: multiplier  multiplier.c
test/: multiplier_test.c
